--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://deploy.frontendlabs.io/"
+baseURL = "https://deploy.frontendlabs.io/"
 languageCode = "en-us"
 title = "My Hugo Proto"
 theme = "hyde"
