--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://deploy.frontendlabs.io/"
 languageCode = "en-us"
-title = "My Hugo Proto"
+title = "FrontendLabs deploy"
 theme = "hyde"
