--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gatsby-plugin-draft": "^0.0.4",
     "gatsby-plugin-mdx": "^1.0.43",
     "gatsby-source-filesystem": "2.1.21",
-    "gatsby-transformer-remark": "2.6.21",
+    "gatsby-transformer-remark": "^2.6.21",
     "hygen": "^4.0.9",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
