feat(makefile-docker): add makefile and docker commands

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production gatsby build",
-    "develop": "cross-env NODE_ENV=develop gatsby develop",
+    "develop": "cross-env NODE_ENV=develop gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve -H 0.0.0.0",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
