--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-transformer-remark": "2.6.21",
     "hygen": "^4.0.9",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
