--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "new:post": "hygen blog new --name"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.4.5",
+    "@mdx-js/react": "^1.4.5",
     "@sindresorhus/slugify": "^0.9.1",
     "cross-env": "^5.2.1",
     "gatsby": "^2.15.9",
     "gatsby-plugin-draft": "^0.0.4",
+    "gatsby-plugin-mdx": "^1.0.43",
     "gatsby-source-filesystem": "2.1.21",
     "gatsby-transformer-remark": "2.6.21",
     "hygen": "^4.0.9",
