--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:md": "npx prettier '**/*.{markdown,md}' --write"
   },
   "dependencies": {
+    "@frontendlabs/ui": "0.3.1",
     "@mdx-js/mdx": "^1.4.5",
     "@mdx-js/react": "^1.4.5",
     "@sindresorhus/slugify": "^0.9.1",
@@ -32,7 +33,10 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby-plugin-styled-components": "^3.1.19",
-    "prettier": "^1.18.2"
+    "gatsby-plugin-typography": "2.3.23",
+    "prettier": "^1.18.2",
+    "react-typography": "0.16.19",
+    "typography": "0.16.19"
   },
   "repository": {
     "type": "git",
